# GIAIC-Q4

./: .gitignore  README.md  requirements.txt
Class-Projects/Currency-Converter-Agent/my-project/: main.py  pyproject.toml
Class-Projects/Poetry-Agent/my-project/: README.md  main.py  pyproject.toml
Class-Projects/Shopping-Agent/: README.md  dummy.py  main.py  pyproject.toml
Class-Projects/Translator-Agent/my_project/: Readme.md  main.py
